--- a/css/style.css
+++ b/css/style.css
@@ -124,14 +124,14 @@ body {
 
 /* SEARCH-FORM */
 .search-form-input {
-    width: 176px;
+    width: auto;
     height: 30px;
     margin-left: 40px;
     padding-top: 6px;
     padding-bottom: 6px;
     text-align: right;
-    border: 0;
-    border-bottom: 1px solid #333;
+    border: 2px solid #333;
+    border-radius: 10px;
 }
 
 
